Changing LPA appeal type labels to section codes

--- a/app/views/_includes/lpa/decided-appeals.html
+++ b/app/views/_includes/lpa/decided-appeals.html
@@ -12,11 +12,11 @@
       classes: 'govuk-!-width-one-half'
     },
     {
-      html: 'Decision date'
+      html: 'Decision date',
+      classes: 'govuk-!-width-one-third'
     },
     {
-      html: 'Appeal type',
-      classes: 'govuk-!-width-one-third'
+      html: 'Appeal type'
     },
     {
       html: 'Decision',
@@ -35,7 +35,7 @@
         html: '8' | daysInPastShort
       },
       {
-        html: 'Full planning'
+        html: 'S78'
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--orange">Allowed in part</strong>'
@@ -52,7 +52,7 @@
         html: '16' | daysInPastShort
       },
       {
-        html: 'Full planning'
+        html: 'S78'
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--yellow">Dismissed</strong>'
@@ -69,7 +69,7 @@
         html: '32' | daysInPastShort
       },
       {
-        html: 'Enforcement notice'
+        html: 'S174'
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--orange">Notice varied and upheld</strong>'
@@ -86,7 +86,7 @@
         html: '64' | daysInPastShort
       },
       {
-        html: 'Householder'
+        html: 'HAS'
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--green">Allowed</strong>'
@@ -103,7 +103,7 @@
         html: '128' | daysInPastShort
       },
       {
-        html: 'Listed building consent'
+        html: 'S20'
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--green">Allowed</strong>'
@@ -120,7 +120,7 @@
         html: '222' | daysInPastShort
       },
       {
-        html: 'Listed building consent'
+        html: 'S20'
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--green">Allowed</strong>'
@@ -137,7 +137,7 @@
         html: '265' | daysInPastShort
       },
       {
-        html: 'Listed building consent'
+        html: 'S20'
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--green">Allowed</strong>'
@@ -154,7 +154,7 @@
         html: '301' | daysInPastShort
       },
       {
-        html: 'Listed building consent'
+        html: 'S20'
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--green">Allowed</strong>'
@@ -171,7 +171,7 @@
         html: '322' | daysInPastShort
       },
       {
-        html: 'Listed building consent'
+        html: 'S20'
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--green">Allowed</strong>'
@@ -188,7 +188,7 @@
         html: '365' | daysInPastShort
       },
       {
-        html: 'Listed building consent'
+        html: 'S20'
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--green">Allowed</strong>'
