--- a/app/views/_includes/lpa/decided-appeals.html
+++ b/app/views/_includes/lpa/decided-appeals.html
@@ -38,7 +38,7 @@
         html: 'S78'
       },
       {
-        html: ' <strong class="govuk-tag govuk-tag--orange">Allowed in part</strong>'
+        html: ' <strong class="govuk-tag govuk-tag--yellow">Allowed in part</strong>'
       }
     ],
     [
@@ -55,7 +55,7 @@
         html: 'S78'
       },
       {
-        html: ' <strong class="govuk-tag govuk-tag--yellow">Dismissed</strong>'
+        html: ' <strong class="govuk-tag govuk-tag--orange">Dismissed</strong>'
       }
     ],
     [
