LPA decided appeal links show appeal overview with correct decision type

--- a/app/views/_includes/lpa/current-appeals.html
+++ b/app/views/_includes/lpa/current-appeals.html
@@ -40,7 +40,7 @@
     rows: [
       [
         {
-          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345301&action=&procedure=written&questionnaire=due&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">1345301</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345301&action=&procedure=written&questionnaire=due&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=&appeal-decided=">1345301</a>'
         },
         {
           html: 'Spital House, Lensfield Rd, Cambridge CB2 1ER'
@@ -63,7 +63,7 @@
       ],
       [
         {
-          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345264&action=&procedure=written&questionnaire=due&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">1345264</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345264&action=&procedure=written&questionnaire=due&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=&appeal-decided=">1345264</a>'
         },
         {
           html: 'Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT'
@@ -86,7 +86,7 @@
       ] if data['questionnaire'] != 'complete',
       [
         {
-          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345273&action=&procedure=written&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">1345273</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345273&action=&procedure=written&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=&appeal-decided=">1345273</a>'
         },
         {
           html: '20 Bermuda Rd, Arbury, Cambridge CB4 3JX'
@@ -108,7 +108,7 @@
       ] if data['statement'] != 'complete',
       [
         {
-          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345260&action=&procedure=written&questionnaire=due&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">1345260</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345260&action=&procedure=written&questionnaire=due&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=&appeal-decided=">1345260</a>'
         },
         {
           html: 'Canterbury House, Weavely, Cambridge CB2 1PT'
@@ -131,7 +131,7 @@
       ],
       [
         {
-          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345176&action=&procedure=written&questionnaire=due&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">1345176</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345176&action=&procedure=written&questionnaire=due&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=&appeal-decided=">1345176</a>'
         },
         {
           html: '22 London Rd, Six Mile Bottom, Newmarket CB8 0UE'
@@ -154,7 +154,7 @@
       ],
       [
         {
-          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345259&action=&procedure=written&questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=due&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">1345259</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345259&action=&procedure=written&questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=due&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=&appeal-decided=">1345259</a>'
         },
         {
           html: 'Five Trees Garden, Cambridge CB4 1UA'
@@ -176,7 +176,7 @@
       ] if data['final-comments'] != 'complete',
       [
         {
-          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345172&action=&procedure=written&questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=due&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">1345172</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345172&action=&procedure=written&questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=due&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=&appeal-decided=">1345172</a>'
         },
         {
           html: '64 Rene Court, Coldham’s Rd, Cambridge CB1 3EW'
@@ -198,7 +198,7 @@
       ],
       [
         {
-          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345264&procedure=inquiry&questionnaire=due&statement=&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">1345264</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345264&appeal-type=inquiry&questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=due&appellant-proofs=&appeal-decided=">1345264</a>'
         },
         {
           html: 'Fripple Court Lane, Fenns Avenue, Fripple, Cambridge CB22 1TP'
@@ -220,7 +220,7 @@
       ],
       [
         {
-          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345264&action=&statement=due&final-comments=&appeal-type=&proofs=&appellant-proofs=">1345264</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345264&action=&statement=due&final-comments=&appeal-type=&proofs=&appellant-proofs=&appeal-decided=">1345264</a>'
         },
         {
           html: 'Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT'
@@ -243,7 +243,7 @@
 
       [
         {
-          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345098&action=&procedure=written&questionnaire=&statement=&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">1345098</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345098&action=&procedure=written&questionnaire=&statement=&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=&appeal-decided=">1345098</a>'
         },
         {
           html: 'The Old Library, 2 Wheeler St, Cambridge CB2 3QB'
@@ -264,7 +264,7 @@
       ],
       [
         {
-          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345171&action=&procedure=written&questionnaire=&statement=&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">1345171</a>'
+          html: '<a href="/manage/appeals/v8/appeal-details?appealCode=1345171&action=&procedure=written&questionnaire=&statement=&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=&appeal-decided=">1345171</a>'
         },
         {
           html: 'Unnamed Road, Cambridge CB2 1PZ'
