--- a/app/views/_includes/lpa/decided-appeals.html
+++ b/app/views/_includes/lpa/decided-appeals.html
@@ -26,7 +26,7 @@
   rows: [
     [
       {
-        html: "<a href='' class='govuk-link'>0201624</a>"
+        html: "<a href='/manage/appeals/v8/appeal-details?appealCode=0201624&appeal-type=written&statement=complete&final-comments=complete&proofs=&appellant-proofs=&appeal-decided=split' class='govuk-link'>0201624</a>"
       },
       {
         html: '38 Tubular Way, Warbingham, BR11 7HA'
@@ -43,7 +43,7 @@
     ],
     [
       {
-        html: "<a href='' class='govuk-link'>0201972</a>"
+        html: "<a href='/manage/appeals/v8/appeal-details?appealCode=0201972&appeal-type=written&statement=complete&final-comments=complete&proofs=&appellant-proofs=&appeal-decided=dismissed' class='govuk-link'>0201972</a>"
       },
       {
         html: '3 Lawn Street, Giffleton, BR2 2BD'
@@ -60,7 +60,7 @@
     ],
     [
       {
-        html: "<a href='' class='govuk-link'>0202120</a>"
+        html: "<a href='/manage/appeals/v8/appeal-details?appealCode=0202120&appeal-type=enforcement&statement=complete&final-comments=complete&proofs=&appellant-proofs=&appeal-decided=varied' class='govuk-link'>0202120</a>"
       },
       {
         html: '22 Bishop Close, Jamvillion, BX2 7PP'
@@ -77,7 +77,7 @@
     ],
     [
       {
-        html: "<a href='' class='govuk-link'>0202331</a>"
+        html: "<a href='/manage/appeals/v8/appeal-details?appealCode=0202331&appeal-type=written&statement=complete&final-comments=complete&proofs=&appellant-proofs=&appeal-decided=allowed' class='govuk-link'>0202331</a>"
       },
       {
         html: '102 Haynesford Way, Adbridge, BR15 0PA'
@@ -94,7 +94,7 @@
     ],
     [
       {
-        html: "<a href='' class='govuk-link'>0212006</a>"
+        html: "<a href='/manage/appeals/v8/appeal-details?appealCode=0212006&appeal-type=written&statement=complete&final-comments=complete&proofs=&appellant-proofs=&appeal-decided=allowed' class='govuk-link'>2012006</a>"
       },
       {
         html: '9 Westley Road, Rochdale, OL11 2AN'
@@ -111,7 +111,7 @@
     ],
     [
       {
-        html: "<a href='' class='govuk-link'>0217634</a>"
+        html: "<a href='/manage/appeals/v8/appeal-details?appealCode=0217634&appeal-type=written&statement=complete&final-comments=complete&proofs=&appellant-proofs=&appeal-decided=allowed' class='govuk-link'>0217634</a>"
       },
       {
         html: '8 Knivvol Drive, Oldham, BR17 2GH'
@@ -120,7 +120,7 @@
         html: '222' | daysInPastShort
       },
       {
-        html: 'S20'
+        html: 'S78'
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--green">Allowed</strong>'
@@ -128,7 +128,7 @@
     ],
     [
       {
-        html: "<a href='' class='govuk-link'>0217801</a>"
+        html: "<a href='/manage/appeals/v8/appeal-details?appealCode=0217801&appeal-type=written&statement=complete&final-comments=complete&proofs=&appellant-proofs=&appeal-decided=allowed' class='govuk-link'>0217801</a>"
       },
       {
         html: '2 Tubular Way, Warbingham, BR12 2PD'
@@ -145,7 +145,7 @@
     ],
     [
       {
-        html: "<a href='' class='govuk-link'>0219924</a>"
+        html: "<a href='/manage/appeals/v8/appeal-details?appealCode=0219924&appeal-type=written&statement=complete&final-comments=complete&proofs=&appellant-proofs=&appeal-decided=allowed' class='govuk-link'>0219924</a>"
       },
       {
         html: '2 Porter Road, Jampton, BR8 8AA'
@@ -154,7 +154,7 @@
         html: '301' | daysInPastShort
       },
       {
-        html: 'S20'
+        html: 'S78'
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--green">Allowed</strong>'
@@ -162,7 +162,7 @@
     ],
     [
       {
-        html: "<a href='' class='govuk-link'>0219983</a>"
+        html: "<a href='/manage/appeals/v8/appeal-details?appealCode=0219897&appeal-type=written&statement=complete&final-comments=complete&proofs=&appellant-proofs=&appeal-decided=allowed' class='govuk-link'>0219897</a>"
       },
       {
         html: '109 Channingford Hill, Salcombe, BR2 8HH'
@@ -171,7 +171,7 @@
         html: '322' | daysInPastShort
       },
       {
-        html: 'S20'
+        html: 'S78'
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--green">Allowed</strong>'
@@ -179,7 +179,7 @@
     ],
     [
       {
-        html: "<a href='' class='govuk-link'>0220012</a>"
+        html: "<a href='/manage/appeals/v8/appeal-details?appealCode=0220012&appeal-type=written&statement=complete&final-comments=complete&proofs=&appellant-proofs=&appeal-decided=allowed' class='govuk-link'>0220012</a>"
       },
       {
         html: '12a Malago Road, Chamford, BR07 2PD'
@@ -188,7 +188,7 @@
         html: '365' | daysInPastShort
       },
       {
-        html: 'S20'
+        html: 'S78'
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--green">Allowed</strong>'
