Guidance for IP comments, content update

--- a/app/views/interested/find-appeal/v10/guidance.html
+++ b/app/views/interested/find-appeal/v10/guidance.html
@@ -74,67 +74,65 @@
     <div class="govuk-grid-column-two-thirds app-mainstream-guide-body">
 
       <h2 class="govuk-heading-m">
-        Find and comment on an appeal
+        Find an appeal
       </h2>
 
       <p class="govuk-body">
-        This is a service for searching, viewing and commenting on planning appeals. Commenting on a planning appeal is also known as ‘making a representation’.
+        Use this service to find, view or comment on a planning appeal. Commenting on a planning appeal is also called ‘making a representation’.
       </p>
 
       <p class="govuk-body">
-        You can use this service to:
+        You can find an appeal using either the:
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
 
         <li>
-          view appeals that are open for comment and submit your comment
+          site postcode
         </li>
 
         <li>
-          view appeals that are closed for comment
-        </li>
-
-        <li>
-          view appeals that are complete and view the decision for those appeals
+          7 digit appeal reference number
         </li>
 
       </ul>
 
       <p class="govuk-body">
-        If you want to comment on an appeal, you'll need an email address so we can contact you if we have any questions.
-      </p>
-
-      <p class="govuk-body">
-        You will also need (one of the following):
+        An appeal will either be:
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
 
         <li>
-          appeal site postcode
+          open for comment
         </li>
-
         <li>
-          appeal site grid reference
+          closed for comment
         </li>
-
         <li>
-          7-digital appeal reference
+          complete and have an appeal decision
         </li>
 
       </ul>
+
+      <p class="govuk-body">
+        You can only comment on an ‘open’ appeal.
+      </p>
 
       <h2 class="govuk-heading-m">
-        Guidance about your comment
+        Comment on an appeal
       </h2>
 
       <p class="govuk-body">
-        Any previous comment that you submitted as part of an application will be considered by the Planning Inspector. The local planning authority shares these with the Planning Inspectorate, so there is no need to submit repeat a comment.
+        You’ll need to give your full name and an email address, so that we can contact you about your comment. We will not share your contact details.
       </p>
 
       <p class="govuk-body">
-        You must not include sensitive information. If you do include sensitive information, we’ll send them back to you. A comment that includes sensitive information will not be included in the appeal.
+        Do not include any comments that you already submitted to a planning application. The Planning Inspectorate will consider all application comments when they review the appeal.
+      </p>
+
+      <p class="govuk-body">
+        You must not include sensitive information. If your comment has sensitive information, we will send it back to you and will not include it in the appeal.
       </p>
 
       {% include "_includes/sensitive-information-list.html" %}
@@ -146,10 +144,6 @@
           Your comment must not include inflammatory or abusive language.
         </strong>
       </div>
-
-      <!-- <p class="govuk-body">
-        Your comment must not include inflammatory or abusive language.
-      </p> -->
 
       <a href="appeal-search-number" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
         Start now
